manifests/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Auth
  template:
    metadata:
      name: Auth
      labels:
        app: Auth
    spec:
      containers:
        - name: auth
          image: Image
          imagePullPolicy: Always
        - name: postgres
          image: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: auth-pvc
      - name: init-script
        configMap:
          name: db-init-script
      restartPolicy: Always
